# cel-core

./: .gitignore  .gitmodules  CHANGELOG.md  CLAUDE.md  CONFORMANCE_FAILURES.md  Cargo.toml  README.md  ROADMAP.md  buf.gen.yaml  buf.yaml  cog.toml  mise.toml
.claude/: handoff.md
.claude/commands/: roadmap-complete.md  roadmap-start.md  roadmap.md  run-conformance.md
.claude/context/: conformance-baseline.md
crates/cel-conformance/src/: lib.rs  service.rs
crates/cel-conformance/tests/: conformance.rs
crates/cel-core/: Cargo.toml
crates/cel-core-checker/: Cargo.toml
crates/cel-core-checker/src/: checker.rs  decls.rs  env.rs  errors.rs  lib.rs  overload.rs  scope.rs  standard_library.rs
crates/cel-core-common/: Cargo.toml
crates/cel-core-common/src/: ast.rs  decls.rs  lib.rs  proto_types.rs
crates/cel-core-common/src/extensions/: encoders_ext.rs  math_ext.rs  mod.rs  optionals_ext.rs  string_ext.rs
crates/cel-core-conformance/: Cargo.toml
crates/cel-core-conformance/src/: lib.rs  loader.rs  service.rs
crates/cel-core-conformance/tests/: conformance.rs
crates/cel-core-lsp/: Cargo.toml
crates/cel-core-lsp/src/: main.rs
crates/cel-core-lsp/src/document/: mod.rs  region.rs  state.rs
crates/cel-core-lsp/src/lsp/: diagnostics.rs  hover.rs  mod.rs  semantic_tokens.rs
crates/cel-core-lsp/src/protovalidate/: builtins.rs  mod.rs  resolver.rs
crates/cel-core-lsp/src/types/: builtins.rs  cel_type.rs  checker.rs  function.rs  mod.rs  validation.rs
crates/cel-core-lsp/tests/: integration.rs
crates/cel-core-parser/: Cargo.toml
crates/cel-core-parser/src/: ast.rs  lexer.rs  lib.rs  macros.rs  parser.rs
crates/cel-core-parser/tests/: errors.rs  parsing.rs
crates/cel-core-parser/tests/common/: mod.rs
crates/cel-core-proto/: Cargo.toml
crates/cel-core-proto/src/: checked_expr.rs  converter.rs  error.rs  lib.rs  operators.rs  source_info.rs  type_conversion.rs
crates/cel-core-types/: Cargo.toml
crates/cel-core-types/src/: lib.rs
crates/cel-core/examples/: error_handling.rs  extensions.rs  extract_values.rs  hello.rs  lists.rs  maps.rs  quickstart.rs  time.rs
crates/cel-core/examples/enums/: README.md  legacy.rs  strong.rs
crates/cel-core/examples/namespaces/: README.md  abbreviations.rs  combined.rs  containers.rs
crates/cel-core/src/: ast.rs  env.rs  lib.rs  unparser.rs
crates/cel-core/src/checker/: checker.rs  errors.rs  mod.rs  overload.rs  scope.rs  standard_library.rs
crates/cel-core/src/eval/: activation.rs  error.rs  evaluator.rs  functions.rs  mod.rs  program.rs  time.rs  value.rs  wkt.rs
crates/cel-core/src/ext/: encoders_ext.rs  math_ext.rs  optionals_ext.rs  string_ext.rs
crates/cel-core/src/parser/: lexer.rs  macros.rs  mod.rs  parser.rs
crates/cel-core/src/types/: ast.rs  decls.rs  mod.rs  proto.rs
crates/cel-lsp/: Cargo.toml
crates/cel-lsp/src/: diagnostics.rs  document.rs  hover.rs  lib.rs  semantic_tokens.rs  text.rs  validation.rs
crates/cel-lsp/src/document/: region.rs
crates/cel-lsp/src/lsp/: semantic_tokens.rs
crates/cel-lsp/src/protovalidate/: builtins.rs  proto_parser.rs  resolver.rs
crates/cel-lsp/src/types/: builtins.rs  function.rs
crates/cel-lsp/tests/: integration.rs
crates/cel-parser/: Cargo.toml
crates/cel-parser/src/: ast.rs  lib.rs  parser.rs
crates/cel-parser/tests/: errors.rs
crates/cel-proto/src/: converter.rs  error.rs  source_info.rs
crates/cel-types/: Cargo.toml
crates/cel-types/src/: checker.rs  functions.rs  lib.rs
