[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.1.3"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ponix-dev/cel-core"
authors = ["ponix-dev"]

[workspace.dependencies]
logos = "0.14"
prost = "0.14"
cel-core-parser = { path = "crates/cel-core-parser", version = "0.1.3" }
cel-core-proto = { path = "crates/cel-core-proto", version = "0.1.3" }
cel-core-types = { path = "crates/cel-core-types", version = "0.1.3" }
cel-core-checker = { path = "crates/cel-core-checker", version = "0.1.3" }
