[package]
name = "cel-core-checker"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Type checker for the Common Expression Language (CEL)"

[dependencies]
cel-core-common.workspace = true

[dev-dependencies]
cel-core-parser.workspace = true
