[package]
name = "cel-core-common"
description = "Common types for CEL: type system, values, and AST"
keywords = ["cel", "types", "ast"]
categories = ["development-tools"]
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
prost-reflect = "0.16"
