[package]
name = "cel-core-conformance"
description = "CEL conformance testing against official cel-spec"
publish = false
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
cel-core.workspace = true
cel-core-proto.workspace = true
prost.workspace = true
prost-reflect = { version = "0.16", features = ["text-format"] }
