[package]
name = "cel-core-lsp"
description = "Language Server Protocol implementation for CEL"
keywords = ["cel", "lsp", "language-server", "ide"]
categories = ["development-tools", "text-editors"]
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
cel-core-common.workspace = true
cel-core-parser.workspace = true
dashmap = "5.5"
tower-lsp = "0.20"
tokio = { version = "1", features = ["full"] }
regex = "1.10"
