[package]
name = "cel-core-proto"
description = "Protobuf types for CEL AST (cel-spec compatibility)"
keywords = ["cel", "protobuf", "ast"]
categories = ["encoding", "parsing"]
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lib]
doctest = false

[dependencies]
cel-core.workspace = true
prost.workspace = true
prost-types = "0.14"
thiserror = "2"
