[package]
name = "cel-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "High-level API for the Common Expression Language (CEL)"

[dependencies]
logos.workspace = true
prost-reflect.workspace = true
prost.workspace = true
regex.workspace = true
